<resources>
    <string name="app_name">Conference Manager</string>
    <string name="action_settings">Settings</string>
    <string name="content_authority">com.example.conferencemanager</string>

    <!--************************************Start of GENERAL section******************************* -->
    <!--Used in the landing page-->
    <string name="landing_choose_type">Choose your type:</string>

    <!--Used in the log in/sign up pages-->
    <string name="login_button">Log in</string>
    <string name="signup_button">Sign up</string>
    <string name="no_input">Please complete the field above.</string>
    <string name="invalid_login">Invalid login credentials</string>
    <string name="generic_error_occurred">An error occurred</string>
    <string name="signup_user_check">Checking username availability&#8230;</string>
    <string name="signup_user_exists">This username is already registered.</string>
    <string name="signup_user_failed">Failed to create the new user.</string>

    <!--Used in the Login Page-->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_new_user">First time using this app?</string>

    <!--Used in the sign up page-->
    <string name="confirm_password_hint">Confirm password</string>
    <string name="email_hint">Email</string>
    <string name="registration_invalid_email">The email you have entered is invalid.</string>
    <string name="signup_password_mismatch">The passwords do not match.</string>
    <string name="signup_short_password">The password must be at least seven characters long.</string>

    <!--Used in the topics fragment for both sides-->
    <string name="no_topics">There are no topics available to display.</string>

    <!--Used in the Admin/Doctor main activities-->
    <string name="menu_logout">Logout</string>
    <!--************************************End of GENERAL section******************************* -->


    <!--************************************Start of ADMIN section******************************* -->

    <!--Used in the Landing Page-->
    <string name="landing_admin_button">Admin</string>

    <!--Used in the Conferences fragment-->
    <string name="admin_no_conferences">There are no conferences to display. Click the plus button to schedule a conference.</string>

    <!--Used in the Conference details/new conf activities-->
    <string name="admin_conf_details_title">Title</string>
    <string name="admin_conf_details_description">Details</string>
    <string name="admin_conf_details_address">Address</string>
    <string name="admin_conf_details_date">Date</string>
    <string name="admin_edit_conf">Edit conference</string>
    <string name="admin_delete_conf">Delete conference</string>
    <string name="admin_delete_conf_confirm">Wait a moment</string>
    <string name="admin_delete_conf_dialog_body">Are you sure you want to delete this conference?</string>
    <string name="admin_delete_conf_error">Unable to delete this conference. Please try again later.</string>
    <string name="admin_edit_conf_error">Unable to edit this conference. Please try again later.</string>

    <!--Used in the new conference activity-->
    <string name="admin_new_conf_title_hint">The name of the conference</string>
    <string name="admin_new_conf_description_hint">What is the conference about?</string>
    <string name="admin_new_conf_address_hint">Where is it held?</string>
    <string name="admin_new_conf_date_hint">When is it going to be? Click to edit.</string>
    <string name="admin_new_conf_invites_title">Send invites to doctors</string>
    <string name="admin_new_conf_button">Add conference</string>


    <!--Activity/framgment titles-->
    <string name="title_activity_admin_login">Admin Log In</string>
    <string name="title_activity_admin_sign_up">Admin Sign Up</string>
    <string name="title_activity_admin_main"></string>
    <string name="title_admin_fragment_conferences">Conferences</string>
    <string name="title_admin_fragment_topics">Topics</string>
    <string name="title_activity_admin_new_conference">Schedule a conference</string>
    <!--************************************End of ADMIN section******************************* -->


    <!--************************************Start of DOCTOR section******************************* -->

    <!--Used in the Landing Page-->
    <string name="landing_doctor_button">Doctor</string>

    <!--Used in the Login Page-->
    <string name="doctor_username_hint">Username</string>
    <string name="doctor_password_hint">Password</string>

    <!--Used in the topics fragment-->
    <string name="doctor_new_topic_title">Title</string>
    <string name="doctor_new_topic_title_hint">Your topic in one sentence</string>
    <string name="doctor_new_topic_description">Description</string>
    <string name="doctor_new_topic_description_hint">Elaborate on your topic</string>
    <string name="doctor_new_topic_button">Add topic</string>
    <string name="doctor_new_topic_error">Unable to create a new topic. Please try again later.</string>

    <!--Used in the invites fragment-->
    <string name="doctor_no_invites">You have no invitations at the moment.</string>

    <!--Used in the invite details activity-->
    <string name="doctor_invite_details_title">Title</string>
    <string name="doctor_invite_details_description">Details</string>
    <string name="doctor_invite_details_address">Address</string>
    <string name="doctor_invite_details_date">Date</string>
    <string name="doctor_invite_details_accept">Accept</string>
    <string name="doctor_invite_details_decline">Decline</string>
    <string name="doctor_invite_error">Unable to process the invitation. Please try again later.</string>

    <!--Activity/Fragment titles-->
    <string name="title_activity_doctor_login">Doctor Log In</string>
    <string name="title_activity_doctor_main"></string>
    <string name="title_activity_doctor_sign_up">Doctor Sign Up</string>
    <string name="title_activity_admin_conference_details">AdminConferenceDetailsActivity</string>
    <string name="title_doctor_fragment_topics">Topics</string>
    <string name="title_doctor_fragment_invites">Invites</string>
    <string name="title_activity_doctor_new_topic">Add a topic</string>
    <string name="title_activity_doctor_invite_details">DoctorInviteDetailsActivity</string>
    <!--************************************End of DOCTOR section******************************* -->
</resources>
