<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.conferencemanager.LandingPageActivity">


    <!--Choose your type:-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/landing_choose_type"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/landing_admin_button"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/Material.Text.Display1.Size"
        android:textColor="@color/colorAccent"
        android:text="@string/landing_choose_type"/>


    <!--Admin button-->
    <Button
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:elevation="@dimen/button_elevation"
        android:id="@+id/landing_admin_button"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/button_padding"
        android:paddingRight="@dimen/button_padding"
        android:textColor="@color/white"
        android:text="@string/landing_admin_button"
        android:textSize="@dimen/Material.Text.Headline.Size"
        android:background="@drawable/button_selector_green"/>

    <!--Doctor button-->
    <Button
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:id="@+id/landing_doctor_button"
        android:paddingLeft="@dimen/button_padding"
        android:paddingRight="@dimen/button_padding"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/landing_admin_button"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:elevation="@dimen/button_elevation"
        android:text="@string/landing_doctor_button"
        android:textSize="@dimen/Material.Text.Headline.Size"
        android:background="@drawable/button_selector_green"/>

</RelativeLayout>
