<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminLoginActivity">

    <!--***************Username fields***********-->

    <!--Username input field-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/admin_login_username_value"
        android:layout_marginLeft="@dimen/activity_vertical_margin_double"
        android:layout_marginStart="@dimen/activity_vertical_margin_double"
        android:layout_marginRight="@dimen/activity_vertical_margin_double"
        android:layout_marginEnd="@dimen/activity_vertical_margin_double"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:hint="@string/username_hint"
        android:layout_above="@+id/admin_login_password_value"/>

    <!--Username error-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin_login_username_error"
        android:visibility="invisible"
        android:layout_below="@+id/admin_login_username_value"
        android:layout_marginTop="@dimen/activity_vertical_margin_quarter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_six_square"
        android:layout_marginStart="@dimen/activity_six_square"
        android:textColor="@color/colorAccent"
        tools:text="Cannot be empty"/>

    <!--***************Password fields**********-->

    <!--Password input field-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/admin_login_password_value"
        android:layout_marginLeft="@dimen/activity_vertical_margin_double"
        android:layout_marginStart="@dimen/activity_vertical_margin_double"
        android:layout_marginRight="@dimen/activity_vertical_margin_double"
        android:layout_marginEnd="@dimen/activity_vertical_margin_double"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_above="@+id/admin_login_button"
        android:layout_marginTop="@dimen/activity_vertical_margin_double"
        android:inputType="textPassword"
        android:hint="@string/password_hint"/>

    <!--Password error-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin_login_password_error"
        android:visibility="invisible"
        android:layout_below="@+id/admin_login_password_value"
        android:layout_marginTop="@dimen/activity_vertical_margin_quarter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_six_square"
        android:layout_marginStart="@dimen/activity_six_square"
        android:textColor="@color/colorAccent"
        tools:text="Cannot be empty"/>

    <!--********Log in button*****-->
    <Button
        android:layout_width="@dimen/standard_button_width"
        android:layout_height="@dimen/standard_button_height"
        android:elevation="@dimen/button_elevation"
        android:id="@+id/admin_login_button"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/button_padding"
        android:paddingRight="@dimen/button_padding"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_double"
        android:text="@string/login_button"
        android:textSize="@dimen/Material.Text.Headline.Size"
        android:background="@drawable/button_selector_green"/>

    <!--**************Sign up elements**************-->

    <!--New user textview-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admin_login_newuser"
        android:text="@string/login_new_user"
        android:textSize="@dimen/Material.Text.Title.Size"
        android:textColor="@color/black"
        android:layout_above="@+id/admin_login_signup_button"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true" />

    <!--Sign up-->
    <Button
        android:layout_width="@dimen/button_width_small_one"
        android:layout_height="@dimen/standard_button_height"
        android:id="@+id/admin_login_signup_button"
        android:elevation="@dimen/button_elevation"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/button_padding_half"
        android:paddingRight="@dimen/button_padding_half"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/signup_button"
        android:textSize="@dimen/Material.Text.Subhead.Size"
        android:background="@drawable/button_selector_green"/>
</RelativeLayout>
